Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           target="_blank"
           rel="noopener"
         >
-          Unlock Pro In Just Rs 4349
+          Unlock Pro In Just Rs 4433
         </a>
       </nav>
     </div>
@@ -185,7 +185,7 @@
 					 accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg"
 					 multiple />
 			</div>
-			<small>Select up to 10 files. The first item previews above.</small>
+			<small>Select up to 10 files. The first item previews above.(Per File Size limit 50–120 MB file)</small>
 		  </div>
 		</div>
 
@@ -262,7 +262,7 @@
               target="_blank"
               rel="noopener"
             >
-              Unlock Pro In Just Rs 4349
+              Unlock Pro In Just Rs 4433
             </a>
 
             <div id="localPrice" class="note" style="margin-top:6px;">
@@ -378,7 +378,7 @@
           span.textContent = formatter.format(localValue) + ' (approx)';
         } catch (e) {
           console.error('FX / geo lookup failed', e);
-          span.textContent = '$49 (USD, approx)';
+          span.textContent = '$30 (USD, approx)';
         }
       }
 
