Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
           <div id="queue" class="queue hidden"></div>
         </div>
       </section>
+	  
+	  
 
       <!-- Settings -->
       <section class="panel" id="settings">
@@ -385,6 +387,29 @@
       updatePrice();
     })();
   </script>
+  
+  <div id="app"></div>
+
+	<!-- Privacy / Data Handling Notice -->
+	<section id="privacy-note" style="max-width: 720px; margin: 2rem auto; padding: 1.5rem; border-radius: 12px; background: #0f172a; color: #e5e7eb; font-size: 0.95rem;">
+	  <h2 style="margin-top: 0; margin-bottom: 0.75rem; font-size: 1.25rem; font-weight: 600;">
+		🔒 We Respect Your Privacy
+	  </h2>
+	  <p style="margin: 0.35rem 0;">
+		<strong>Your files are never stored.</strong> We only create a temporary copy on our server to process your video.
+	  </p>
+	  <p style="margin: 0.35rem 0;">
+		This temporary copy is <strong>automatically deleted immediately after processing</strong>.
+	  </p>
+	  <p style="margin: 0.35rem 0;">
+		Your original file always stays on your device. We do not analyze, share, or use your files for any other purpose.
+	  </p>
+	</section>
+
+	<footer id="privacy-footer" style="text-align: center; font-size: 0.8rem; color: #9ca3af; margin-top: 2rem;">
+	  We do not store your videos. All uploaded files are automatically deleted from our server after processing.
+	</footer>
+
 
   <!-- App logic -->
   <script src="./app.js?v=3"></script>
