Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Anamorphic De-Squeeze Tool — Web Desqueeze Studio</title>
+  <title>Anamorphic De-Squeeze Tool — Web Desqueeze Studio - By Cinematics</title>
   <meta name="description"
         content="Free online anamorphic de-squeeze tool. Upload anamorphic photos or videos, choose your lens factor (1.33x, 1.5x, 1.8x, 2.0x) and export fully corrected MP4/JPG/PNG with batch support." />
 
