Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   
   <script>
 (async function () {
-  const INR_PRICE = 5000;
+  const INR_PRICE = 2000;
 
   const btnHeader = document.getElementById("proButtonHeader");
   const btnMain = document.getElementById("proButtonMain");
 
   // Set fallback text
-  if (btnHeader) btnHeader.textContent = "Unlock Pro in Just ₹5000";
-  if (btnMain) btnMain.textContent = "Unlock Pro in Just ₹5000";
+  if (btnHeader) btnHeader.textContent = "Unlock Pro in Just ₹2000";
+  if (btnMain) btnMain.textContent = "Unlock Pro in Just ₹2000";
 
   try {
     // Detect user currency
@@ -171,11 +171,11 @@
 			<!-- TODO: replace href with your live Razorpay payment link -->
 		<a
 	  class="btn btn--primary"
-	  href="https://razorpay.me/@cinematics"
+	  href="https://rzp.io/rzp/d8ILFlw"
 	  target="_blank"
 	  rel="noopener"
 	>
-	  UnlockPro Just Rs5000
+	  UnlockPro Just Rs2000
 	</a>
       </nav>
     </div>
@@ -306,11 +306,11 @@
 				  <div>
 				<a
 		  class="btn btn--primary"
-		  href="https://razorpay.me/@cinematics"
+		  href="https://rzp.io/rzp/d8ILFlw"
 		  target="_blank"
 		  rel="noopener"
 		>
-		  UnlockPro Just Rs5000
+		  UnlockPro Just Rs2000
 		</a>
 
             <div id="localPrice" class="note" style="margin-top:6px;">
