Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -348,14 +348,42 @@
   </div>
 
   <!-- Optional SEO copy -->
+  <!-- SEO-Optimized Content Block for Anamorphic De-Squeeze Studio -->
   <main class="seo-copy" id="how-it-works">
-    <h2>What is anamorphic de-squeeze?</h2>
+
+    <!-- Primary H1 tag clearly defines the page's main purpose -->
+    <h1>Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio</h1>
+
+    <!-- H2 to address the user's initial question (informational intent) -->
+    <h2>What is anamorphic de-squeeze and why fix distortion?</h2>
     <p>
-      Anamorphic lenses squeeze the image horizontally so you can capture a wider field of view on a normal sensor.
-      Without de-squeezing, everything looks tall and skinny. An anamorphic de-squeeze tool stretches the footage back
-      to its intended aspect ratio so your shots look cinematic instead of distorted.
+      <strong>Anamorphic lenses</strong> squeeze the image horizontally to capture a wider field of view on a normal sensor. 
+      This unique look is popular with professional filmmakers and those utilizing affordable <strong>mobile anamorphic lenses</strong> 
+      (like those from Moment, Sirui, or Moondog Labs) on their iPhone or Android devices. 
+      Without de-squeezing, footage looks tall and skinny. This <strong>online anamorphic de-squeeze tool</strong> fixes the 
+      <span translate="no">anamorphic distortion</span>, stretching the footage back to its intended <strong>cinematic aspect ratio</strong> 
+      (e.g., 2.39:1) so your shots look professional instead of stretched.
     </p>
+
+    <!-- H2 to guide users on how to use the tool (transactional intent) -->
+    <h2>How to De-Squeeze Photos and Videos Online (Batch Processing)</h2>
+    <p>
+      Our web studio makes it easy to use this <strong>anamorphic video editor online</strong>, right in your browser, no downloads required. 
+      We support <strong>batch processing</strong> of up to 10 files at once for efficiency. It's the perfect 
+      <span translate="no">anamorphic aspect ratio converter</span> for quick edits.
+    </p>
+
+    <!-- H3 to detail key features and formats -->
+    <h3>Supported Formats & Key Features:</h3>
+    <ul>
+      <li>Preview horizontal de-squeeze in real-time.</li>
+      <li>Export fully corrected MP4, JPG, and PNG files.</li>
+      <li>Batch process up to 10 files simultaneously.</li>
+      <li>Manual input for various squeeze factors (1.33x, 1.55x, 2.0x). Use this to ensure your `1.33x anamorphic de-squeeze` is perfect.</li>
+    </ul>
+
   </main>
+
 
   <footer class="site-footer">
     <div class="site-footer__inner">
